--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,5 +35,13 @@
         app:layout_constraintBottom_toBottomOf="@+id/tv_title"
         android:layout_width="68dp"
         android:layout_height="68dp"/>
+    <com.youth.banner.Banner
+        android:id="@+id/top_banner"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/iv_head"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        app:banner_indicator_marginLeft="0dp"
+        app:banner_indicator_marginRight="0dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
